--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 * {
     box-sizing: border-box;
+    margin: 0 auto;
 }
-
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
